RESOLVED FIXED68612
[Qt] Redirection overflow errors have wrong error domain
https://bugs.webkit.org/show_bug.cgi?id=68612
Summary [Qt] Redirection overflow errors have wrong error domain
Jesus Sanchez-Palencia
Reported 2011-09-22 05:06:30 PDT
Redirection overflow currently puts the URL hostname in the errorDomain field in QNetworkReplyHandler::redirect(). We should expose that error somehow.
Attachments
Patch (3.31 KB, patch)
2011-09-22 05:30 PDT, Jesus Sanchez-Palencia
no flags
Jesus Sanchez-Palencia
Comment 1 2011-09-22 05:30:21 PDT
Andreas Kling
Comment 2 2011-09-22 05:33:15 PDT
Comment on attachment 108316 [details] Patch Sure, this is better. r=me
Jesus Sanchez-Palencia
Comment 3 2011-09-22 05:42:37 PDT
Comment on attachment 108316 [details] Patch Clearing flags on attachment: 108316 Committed r95710: <http://trac.webkit.org/changeset/95710>
Jesus Sanchez-Palencia
Comment 4 2011-09-22 05:42:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.