[Qt] Redirection overflow errors have wrong error domain https://bugs.webkit.org/show_bug.cgi?id=68612

Reviewed by Andreas Kling.

Source/WebCore:

Redirection overflow currently puts the URL hostname in the errorDomain field.
Now redirection overflow errors will be classified as "HTTP" errors.

* platform/network/qt/QNetworkReplyHandler.cpp:
(WebCore::QNetworkReplyHandler::redirect):

Source/WebKit2:

Redirection overflow currently puts the URL hostname in the errorDomain field
and therefore are treated as a QWebError::EngineError. From now on they
will be treated as QWebError::HttpError, since their error domain was modified
to "HTTP" in QNetworkReplyHandler::redirect().

* UIProcess/API/qt/qweberror.cpp:
(QWebError::type):

Canonical link: https://commits.webkit.org/84554@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95710 268f45cc-cd09-0410-ab3c-d52691b4dbfc